Revision history for Dist-Zilla-Plugin-MinimumPerlFast

{{$NEXT}}

0.002     2014-03-17 16:21:11CET+0100 Europe/Amsterdam
          Switched to strict version strings
          Fixed documention

0.001     2013-05-29 22:13:35 Europe/Amsterdam
          Initial release