@@ -1,6 +1,7 @@
 Revision history for Dist-Zilla-Plugin-MinimumPerlFast
 
 {{$NEXT}}
+          Only checks .pm, .pl, or .t files or files with perl in shebang
 
 0.002     2014-03-17 16:21:11CET+0100 Europe/Amsterdam
           Switched to strict version strings
